# ShapeGestureGenerator

./: CMakeLists.txt  README.md  build_ninja.sh  run.sh
src/: main.cpp
